fix: hide non-selected tab panels with display:none
React Aria's shouldForceMount renders all panels with data-inert but
doesn't hide them visually, causing all tab contents to overlap.

--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -38,6 +38,8 @@
     border-left 5px solid #72bca6
     padding 10px
     padding-bottom 50px
+    &[data-inert]
+      display none
 
     .dialogTab
       input[type=text]
